    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: KDE4 workaround: no colors for synchronizer
    FIXED: MediaButton doesn't notice unmounted pen drives+CD/DVD-s
    FIXED: "local network" bookmark didn't work
    FIXED: bookmark menu was not always closed after opening a bookmark
    FIXED: [ 2017011 ] Crash when changing the Qt theme
    FIXED: icons for symlinks are corrupted
    FIXED: [ 2023599 ] start root mode Krusader works again (thanks to gladiac)
    FIXED: [ 1980765 ] error at creating ../dir directory
    FIXED: [ 2014344 ] CTRL-C (copy) does not work in internal editor
    FIXED: Viewing directories are disabled to prevent KDE 4 crash
    FIXED: [Debian: 492955] useraction's availability section was dumped to
           "command" element. (thanks Iván Forcada Atienza)
    FIXED: Do not duplicate menu entries in UserAction menu while still not crashing when
           configuring toolbars.

     I18N: Updated Ukrainian translation (thanks Yuri Chornoivan)
     I18N: Updated Slovenian translation (thanks Matej Urbancic)


2.0.0-beta1 "Phoenix Egg"
=========================

    ADDED: [ 1962519 ] searching by regexp
    ADDED: [ 1172426 ] loading user defined folder icons (can be turned off)
    ADDED: Posibility to remove default useractions
    ADDED: Thunderbird can be used as the default e-mail sender
    ADDED: Sending more than one file in e-mail is possible
    ADDED: Submenus for categories in UserAction menu and context menu
    ADDED: Character encoding for content search
    ADDED: Select remote encoding for krarc
    ADDED: New synchronizer shortcuts for modifying the synchronizer tasks
